--- a/.github/workflows/.aspect-workflows-reusable.yaml
+++ b/.github/workflows/.aspect-workflows-reusable.yaml
@@ -1,7 +1,7 @@
 # ==================================================================================================
-# Aspect Workflows Reusable Workflow for GitHub Actions (v5.10.14-dev.1.g797e8a6)
+# Aspect Workflows Reusable Workflow for GitHub Actions (v5.9.33-dev.1.g523789e)
 #
-# https://github.com/marketplace/actions/aspect-workflows?version=5.10.14-dev.1.g797e8a6
+# https://github.com/marketplace/actions/aspect-workflows?version=5.9.33-dev.1.g523789e
 #
 # At this time, GitHub Actions does not allow referencing reusable workflows from public
 # repositories in other organizations. See
@@ -37,10 +37,10 @@
 #    jobs:
 #      aspect-workflows:
 #        name: Aspect Workflows
-#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.10.14-dev.1.g797e8a6
+#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.9.33-dev.1.g523789e
 #    ```
 # ==================================================================================================
-name: Aspect Workflows Reusable Workflow (v5.10.14-dev.1.g797e8a6)
+name: Aspect Workflows Reusable Workflow (v5.9.33-dev.1.g523789e)
 
 on:
   # Makes this workflow reusable, see
@@ -94,17 +94,17 @@ jobs:
       ASPECT_WORKFLOWS_CONFIG: ${{ inputs.aspect-config }}
 
     steps:
-      - name: Workflows environment
+      - name: Configure environment
         run: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/configure_workflows_env
 
       - name: Clone repo
         uses: actions/checkout@v4
 
-      - name: Agent health check
+      - name: Agent health checks
         run: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/agent_health_check
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].health_check_timeout }}
 
-      - name: Process secrets
+      - name: Process Secrets
         id: process_secrets
         if: inputs.inherited_secrets != ''
         run: |
@@ -123,23 +123,22 @@ jobs:
           write_output_files: true
           output_dir: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.ARTIFACTS_DIR }}
 
-      - name: Checkout health
-        uses: aspect-build/workflows-action@5.10.14-dev.1.g797e8a6
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].checkout_task_timeout }}
-        if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].has_checkout_task
+      - name: Branch Freshness
+        uses: aspect-build/workflows-action@5.9.33-dev.1.g523789e
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch_freshness_timeout }}
         with:
           workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
-          task: checkout
+          task: branch_freshness
 
       - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].name }}
-        uses: aspect-build/workflows-action@5.10.14-dev.1.g797e8a6
+        uses: aspect-build/workflows-action@5.9.33-dev.1.g523789e
         env: ${{ inputs.inherited_secrets != '' && fromJson(steps.process_secrets.outputs.filtered_secrets) || fromJson('{}') }}
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].timeout_in_minutes }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
             task: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
 
-      - name: Send notification to Slack
+      - name: Send notification to Slack workflow
         id: slack
         # oncall cares about branches that do delivery, so key this on whether we produce a delivery manifest
         if: inputs.slack_webhook_url != '' && failure() && fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
@@ -152,9 +151,9 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets[inputs.slack_webhook_url] }}
 
-      - name: Delivery manifest
+      - name: Delivery Manifest
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: aspect-build/workflows-action@5.10.14-dev.1.g797e8a6
+        uses: aspect-build/workflows-action@5.9.33-dev.1.g523789e
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery_manifest_timout }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
@@ -162,7 +161,7 @@ jobs:
             args: "--data TARGETS_SOURCE=${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}"
 
       # Upload all artifacts for the workspace
-      - name: Upload artifacts
+      - name: Upload Artifact
         # The `always()` condition makes this step run even if a previous step failed.
         # Setting `continue-on-error: true` on previous steps isn't ideal as the UI
         # will flag them as having passed even if they failed.
@@ -174,7 +173,7 @@ jobs:
           overwrite: true
 
       # Codecov
-      - name: Codecov upload
+      - name: Codecov Upload
         # The `always()` condition makes this step run even if a previous step failed.
         # Setting `continue-on-error: true` on previous steps isn't ideal as the UI
         # will flag them as having passed even if they failed.
@@ -188,7 +187,7 @@ jobs:
                                   # by the bazel convenience symlinks and finds the same coverage report
                                   # under bazel-out and {workspace}/bazel-out.
 
-      - name: Trigger delivery
+      - name: Trigger Delivery
         # This uses the following API: https://docs.github.com/en/rest/actions/workflows?apiVersion=2022-11-28#create-a-workflow-dispatch-event
         run: |
           curl \
@@ -196,6 +195,6 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ inputs.delivery-workflow }}/dispatches \
-            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\",\"workspace\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}\"}}"
+            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\"}}"
         shell: bash
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery
