--- a/.github/workflows/.aspect-workflows-reusable.yaml
+++ b/.github/workflows/.aspect-workflows-reusable.yaml
@@ -1,7 +1,7 @@
 # ==================================================================================================
-# Aspect Workflows Reusable Workflow for GitHub Actions (v5.11.0-alpha0.dev.60.g8ec49fe)
+# Aspect Workflows Reusable Workflow for GitHub Actions (v5.9.35)
 #
-# https://github.com/marketplace/actions/aspect-workflows?version=5.11.0-alpha0.dev.60.g8ec49fe
+# https://github.com/marketplace/actions/aspect-workflows?version=5.9.35
 #
 # At this time, GitHub Actions does not allow referencing reusable workflows from public
 # repositories in other organizations. See
@@ -37,10 +37,11 @@
 #    jobs:
 #      aspect-workflows:
 #        name: Aspect Workflows
-#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.11.0-alpha0.dev.60.g8ec49fe
+#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.9.35
 #    ```
 # ==================================================================================================
-name: Aspect Workflows Reusable Workflow (v5.11.0-alpha0.dev.60.g8ec49fe)
+name: Aspect Workflows Reusable Workflow (v5.9.35)
+
 on:
   # Makes this workflow reusable, see
   # https://github.blog/2022-02-10-using-reusable-workflows-github-actions
@@ -64,6 +65,7 @@ on:
       inherited_secrets:
         description: 'Comma separated list of secrets or regex (Oniguruma) describing secrets to be made available during the build. "secrets: inherit" must also be set. The regex is used by jq internally which uses the Oniguruma regular expression library: https://jqlang.github.io/jq/manual/'
         type: string
+
 jobs:
   setup:
     runs-on: [self-hosted, aspect-workflows, "${{ inputs.queue }}"]
@@ -78,8 +80,10 @@ jobs:
             --gha_json_pretty_print=false \
           )
           tee "${GITHUB_OUTPUT}" <<< "json=${ROSETTA_RESULT}"
+
     outputs:
       cfg: ${{ steps.rosetta-generate.outputs.json }}
+
   bazel:
     needs: [setup]
     runs-on: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].labels }}
@@ -88,23 +92,29 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.cfg).matrix_config }}
     env:
       ASPECT_WORKFLOWS_CONFIG: ${{ inputs.aspect-config }}
+
     steps:
-      - name: Workflows environment
+      - name: Configure environment
         run: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/configure_workflows_env
+
       - name: Clone repo
         uses: actions/checkout@v4
-      - name: Agent health check
+
+      - name: Agent health checks
         run: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/agent_health_check
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].health_check_timeout }}
-      - name: Process secrets
+
+      - name: Process Secrets
         id: process_secrets
         if: inputs.inherited_secrets != ''
         run: |
           REQUIRED_SECRETS=$(${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/jq -R --compact-output 'gsub("\\s+";"";"g") | split(",")' <<< "${{ inputs.inherited_secrets }}")
           FILTERED_SECRETS=$(${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/jq --compact-output --argjson secrets "${REQUIRED_SECRETS}" 'with_entries( select (.key | test($secrets[]) ) )' <<< '''${{ toJson(secrets) }}''' )
           echo "filtered_secrets=${FILTERED_SECRETS}" | tee ${GITHUB_OUTPUT}
+
       - name: Prepare archive directories
         run: rm -rf ${{ join(fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_paths, ' ') }}
+
       - name: Determine changed files
         uses: tj-actions/changed-files@v42
         if: endsWith(matrix.job, 'format')
@@ -112,21 +122,23 @@ jobs:
           json: true
           write_output_files: true
           output_dir: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.ARTIFACTS_DIR }}
-      - name: Checkout health
-        uses: aspect-build/workflows-action@5.11.0-alpha0.dev.60.g8ec49fe
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].checkout_task_timeout }}
-        if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].has_checkout_task
+
+      - name: Branch Freshness
+        uses: aspect-build/workflows-action@5.9.35
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch_freshness_timeout }}
         with:
           workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
-          task: checkout
+          task: branch_freshness
+
       - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].name }}
-        uses: aspect-build/workflows-action@5.11.0-alpha0.dev.60.g8ec49fe
+        uses: aspect-build/workflows-action@5.9.35
         env: ${{ inputs.inherited_secrets != '' && fromJson(steps.process_secrets.outputs.filtered_secrets) || fromJson('{}') }}
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].timeout_in_minutes }}
         with:
-          workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
-          task: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
-      - name: Send notification to Slack
+            workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
+            task: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
+
+      - name: Send notification to Slack workflow
         id: slack
         # oncall cares about branches that do delivery, so key this on whether we produce a delivery manifest
         if: inputs.slack_webhook_url != '' && failure() && fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
@@ -138,16 +150,18 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets[inputs.slack_webhook_url] }}
-      - name: Delivery manifest
+
+      - name: Delivery Manifest
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: aspect-build/workflows-action@5.11.0-alpha0.dev.60.g8ec49fe
+        uses: aspect-build/workflows-action@5.9.35
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery_manifest_timout }}
         with:
-          workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
-          task: delivery_manifest
-          args: "--data TARGETS_SOURCE=${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}"
+            workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
+            task: delivery_manifest
+            args: "--data TARGETS_SOURCE=${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}"
+
       # Upload all artifacts for the workspace
-      - name: Upload artifacts
+      - name: Upload Artifact
         # The `always()` condition makes this step run even if a previous step failed.
         # Setting `continue-on-error: true` on previous steps isn't ideal as the UI
         # will flag them as having passed even if they failed.
@@ -157,8 +171,9 @@ jobs:
           name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_prefix }}${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}.artifacts
           path: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_upload_pattern }}
           overwrite: true
+
       # Codecov
-      - name: Codecov upload
+      - name: Codecov Upload
         # The `always()` condition makes this step run even if a previous step failed.
         # Setting `continue-on-error: true` on previous steps isn't ideal as the UI
         # will flag them as having passed even if they failed.
@@ -169,9 +184,10 @@ jobs:
           files: bazel-out/_coverage/_coverage_report.dat
           token: ${{ secrets.CODECOV_TOKEN }}
           functionalities: search # Disable searching for coverage reports. If enabled, it gets confused
-          # by the bazel convenience symlinks and finds the same coverage report
-          # under bazel-out and {workspace}/bazel-out.
-      - name: Trigger delivery
+                                  # by the bazel convenience symlinks and finds the same coverage report
+                                  # under bazel-out and {workspace}/bazel-out.
+
+      - name: Trigger Delivery
         # This uses the following API: https://docs.github.com/en/rest/actions/workflows?apiVersion=2022-11-28#create-a-workflow-dispatch-event
         run: |
           curl \
@@ -179,6 +195,6 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ inputs.delivery-workflow }}/dispatches \
-            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\",\"workspace\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}\"}}"
+            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\"}}"
         shell: bash
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery
